# haskellfoundation.github.io

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  LICENSE  README.md  build.sh  cabal.project  default.nix  dev.css  flake.nix  haskell-foundation.cabal  index.html  nixpkgs.nix  package-lock.json  package.json  postcss.config.js  project.nix  release.nix  result  shell.nix  site.hs  stack.yaml  tailwind.config.js  watch.sh
.github/: PULL_REQUEST_TEMPLATE.md
affiliates/: cabal.markdown  clash.markdown  clc.markdown  cryptographygroup.markdown  ghc.markdown  ghcup.markdown  hackage.markdown  haskelladmins.markdown  haskelllove.markdown  haskellorg.markdown  haskellweekly.markdown  hls.markdown  ihp.markdown  index.html  servant.markdown  stack.markdown  stackage.markdown  zurihac.markdown
board-nominations/: index.html
careers/: devops.html  devops.markdown  ed.html  ed.markdown  executive-director.html  executive-director.markdown  index.html
contact/: index.html
css/: main.css
docs/: index.html  podcast.html  podcast.xml
donations/: index.html
events/: 2023-ghc-development-workshop.html  2023-ghc-development-workshop.markdown  2024-haskell-ecosystem-workshop.html  2024-haskell-ecosystem-workshop.markdown  2025-haskell-ecosystem-workshop.html  2025-haskell-ecosystem-workshop.markdown  2025-haskell-implementors-workshop.html  2025-haskell-implementors-workshop.markdown  2026-amerihac.html  2026-amerihac.markdown  2026-haskell-ecosystem-workshop.html  2026-haskell-ecosystem-workshop.markdown  2026-haskell-implementors-workshop.html  2026-haskell-implementors-workshop.markdown  index.html
faq/: how-do-projects-or-teams-affiliate-with-the-haskell-foundation.markdown  index.html  what-is-the-relationship-between-hf-and-haskelldotorg.markdown  what-is-the-relationship-between-hf-and-the-community-industry-etc.markdown  who-is-involved.markdown
haskell/: haskell-foundation.cabal  site.hs
news/: index.html  (+4 more)
(+682 files in other folders)
