name:               haskell-foundation
version:            0.1.0.0
build-type:         Simple
cabal-version:      2.0

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll ^>= 4.14 || ^>= 4.15
                  , monadlist
                  , pandoc >=2.11 && <2.20
                  , filepath ^>= 1.4
                  , text
  ghc-options:      -threaded
  default-language: Haskell2010
