name:               haskell-foundation
version:            0.1.0.0
build-type:         Simple
cabal-version:      2.0

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll ^>= 4.14 || ^>= 4.15 || ^>= 4.16
                  , monadlist
                  , pandoc >=2.11 && <3.8
                  , filepath ^>= 1.5
                  , text
  ghc-options:      -threaded
  default-language: Haskell2010

executable social-draft
  main-is:          Main.hs
  hs-source-dirs:   tools/social-crossposting
  build-depends:    base == 4.*
                  , directory
                  , filepath ^>= 1.5
                  , pandoc >=2.11 && <3.8
                  , text
  default-language: Haskell2010
